--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=postgres://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
