--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,30 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
+    - name: Set up Heroku CLI
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install Heroku CLI
+      run: |
+        curl https://cli-assets.heroku.com/install.sh | sh
+      env:
+         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+
+    - name: Connect to Heroku
+      run: |
+          heroku login -i
+      env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+
+    - name: Run PostgreSQL Command
+      run: |
+          heroku pg:psql postgresql-flat-54928 --app HEROKU_APP_NAME
+          # Example: heroku pg:info -a your-heroku-app-name
+      env:
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       env:
